--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -6,6 +6,11 @@ $font-primary: 'Lato';
 $color-primary: black;
 $color-secondary: black;
 
+$instagram: #a01b5b;
+$linkedin: #0074ae;
+$facebook: #485a96;
+
+
 // sizes
 $container-large: 1170px;
 $container-medium: 980px;
