--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -168,6 +168,67 @@
     }   
 }
 
+.intro {
+    margin-bottom: 100px;
+
+    .small-7 {
+        width: calc(58.33333% - 100px);
+        margin-left: 100px;
+        text-align: center;
+
+        .container {
+            width: 700px;
+            margin: 0 auto;
+            text-align: left;
+
+            h2 {
+                font-size: 35px;
+                color: #212121;
+                font-weight: bold;
+                line-height: 1.167;
+                margin-bottom: 45px;
+            }
+
+            p {
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 28px;
+                
+                &.info {
+                    color:  #898989;
+                    font-size: 22px;
+                }
+    
+                &.audience {
+                    color:  #5d5b5b;
+                }
+    
+                &.experience {
+                    color:  #3d3d3d;
+
+                    b {
+                        color: #5d5b5b;
+                        font-weight: 700;
+                    }
+                }
+            }
+        }
+    }
+    .small-5 {
+        width: calc(41.66667% - 100px);
+        margin-right: 100px;
+        text-align: center;
+        padding-top: 75px;
+
+        img {
+            width: 383px;
+            height: 367px;
+        }
+    }
+}
+
+
+
 
   
   
