--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -227,7 +227,69 @@
     }
 }
 
+.services {
+    width: 100%;
+    height: 375px;
+    background:  #b7236a;
 
+    h4 {
+        text-align: center;
+        padding-top: 55px;
+        padding-bottom: 50px;
+        color: white;
+        font-size: 36px;
+        font-weight: 800;
+        line-height: 34px;
+    }
+
+    .grid-x {
+        width: $container-large;
+        margin: 0 auto;
+
+        .cell {
+            border-radius: 4px;
+            border-width: 1px;
+            border-color:  #d5a7bd;
+            border-style: solid;
+            width: 368px;
+            height: 146px;
+            margin: 0 auto;
+            padding-top: 32px;
+            padding-left: 25px;
+
+            &:first-child {
+                margin-left: 0;
+            }
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            dl {
+                dt {
+                    color: white;
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 34px;
+                }
+
+                dd {
+                    display: inline-block;
+                    color:  #ede8f2;
+                    a {
+                        color:  #ede8f2;
+                        font-size: 16px;
+                        font-weight: 500;
+                        line-height: 26px;
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+
+    
+}
 
 
   
