installed clean webpack plugin for updating dist folder

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -352,7 +352,7 @@
                         height: 25px;
                         display: block;
                         background: #cf84a8;
-                        //background: url("../../dist/graphics/svg/noun_1016411.svg") center center no-repeat;
+                        //background: url("graphics/svg/noun_1016411.svg") center center no-repeat;
                     }
                 }
             }
@@ -368,7 +368,7 @@
                         height: 25px;
                         display: block;
                         background: #9b6895;
-                        //background: url("../../dist/graphics/svg/noun_1016411.svg") center center no-repeat;
+                        //background: url("graphics/svg/noun_1016411.svg") center center no-repeat;
                     }
                 }
             }
