--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -212,6 +212,21 @@ h4 {
 
 .intro {
     padding-bottom: 100px;
+    z-index: 1;
+    width: 100%;
+    background: white;
+    position: relative;
+
+    #triangle-grey {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        border-bottom: 697px solid #edf2f4;
+        border-left: 660px solid transparent;
+        z-index: -1;
+    }
 
     .small-7 {
         width: calc(58.33333% - 100px);
@@ -260,10 +275,10 @@ h4 {
         padding-top: 75px;
         position: relative;
 
-
         img {
             width: 383px;
             height: 367px;
+            z-index: 10;
         }
     }
 }
@@ -272,6 +287,38 @@ h4 {
     width: 100%;
     height: 375px;
     background:  #b7236a;
+    position: relative;
+    z-index: -2;
+
+    #triangle-left {
+        position: absolute;
+        bottom: 0;
+        right: 636px;
+        height: 0;
+        border-bottom: 697px solid #af246f;
+        border-left: 737px solid transparent;
+        z-index: -1;
+    }
+
+    #triangle-middle {
+        position: absolute;
+        bottom: 0;
+        right: 318px;
+        height: 0;
+        border-bottom: 697px solid #a12577;
+        border-left: 737px solid transparent;
+        z-index: -1;
+    }
+
+    #triangle-right {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 0;
+        border-bottom: 697px solid #8f2782;
+        border-left: 737px solid transparent;
+        z-index: -1;
+    }
 
     h4 {
         text-align: center;
