--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -10,11 +10,10 @@ $instagram: #a01b5b;
 $linkedin: #0074ae;
 $facebook: #485a96;
 
-
-// sizes
-$container-large: 1170px;
-$container-medium: 980px;
-$container-small: 768px;
-$container-extra-small: 320px;
+$container-small: 420px;
+$container-medium: 768px;
+$container-large: 980px;
+$container-xlarge: 1170px;
+$container-xxlarge: 1440px;
 
 // images
