--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 @import 'foundation';
 @import 'variables';
 @import 'mixins';
+@import 'responsive';
 
 .body {
     font-family: $font-primary;
@@ -327,7 +328,7 @@ h4 {
 
     hr {
         margin-top: -18px;
-        width: 155px;
+        width: 140px;
         height: 10px;
         background: #ebe2f5;
         border-bottom: none;
@@ -336,7 +337,7 @@ h4 {
     }
 
     .grid-x {
-        width: $container-large;
+        width: $container-xlarge;
         margin: 0 auto;
 
         .cell {
@@ -404,7 +405,7 @@ h4 {
     }
 
     .grid-x {
-        width: $container-large;
+        width: $container-xlarge;
         margin: 0 auto;
 
         .cell {
@@ -549,25 +550,32 @@ h4 {
                 height: 39px;
                 margin: 0 auto;
                 border: none;
+               
             }
 
-            hr {
-                display: block;
-                @include background(180deg, -90deg, #77d5cd, 0%, #92ddb3, 100%);
-                height: 3px;
-                margin-top: -3px;
-                width: 285px;
-                margin-bottom: 0;
-                margin-bottom: 20px;
-            }
+            input, textarea {
+                background-image: linear-gradient(-90deg, #77d5cd 0%, #92ddb3 100%);
+                background-repeat: no-repeat;
+                background-position: 0 calc(100% + 3px),0 0;
+                background-size: 100% 5px;
+                box-shadow: none;
+                border-bottom: 5px solid #77d5cd;
+                border-color: transparent;
+                
+              }
 
             select {
                 margin-top: 13px;
+                border-radius: 3px;
+                background-color: rgb(245, 245, 245);
+                border-bottom: 3px solid #77d5cd;
             }
 
             textarea {
                 resize: none;
                 margin-top: 13px;
+                border-radius: 3px;
+                background-color: rgb(245, 245, 245);
             }
 
             .buttons {
