--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,14 @@
 
 .body {
     font-family: $font-primary;
+    height: 100%;
+	width: 100%;
+	padding: 0;
+	border: 0;
+	margin: 0;
+	font-size: 100%;
+    position: relative;
+
 }
 
 h2 {
@@ -156,20 +164,22 @@ h4 {
         width: 800px;
         position: absolute;
         top: 20%;
-        left: 25%;
+        left: 10%;
 
         h1 {
             color: white;
-            font-size: 62px;
+            font-size: 3.875rem;
             font-weight: 900;
-            line-height: 74px;
+            line-height: 1.194;
+            padding: 0 20px;
         }
     
         p {
             color:  white;
             font-size: 26px;
             font-weight: 300;
-            line-height: 80px;
+            line-height: 26px;
+            padding: 20px;
         }
     }
 }
@@ -181,12 +191,13 @@ h4 {
         margin-bottom: 18px;
 
         .cell {
+            margin: 10px;
             position: relative;
-            height: calc(33.33333% - 1.875rem);
-            padding-bottom: calc(33.33333%*0.75 - 1.875rem*0.75);
+            width: calc(33.33333% - 1.875rem);
+            padding-bottom: calc((33.33333% - 1.875rem)*0.75);
             border-radius: 3px;
             background-color:  #729da0;
-    
+
             .title, .description {
                 color: white;
                 position: absolute;
@@ -203,12 +214,12 @@ h4 {
     
             .description {
                 font-size: 18px;
-                line-height: 4.071;
+                line-height: 18px;
                 font-weight: 300;
                 bottom: 0;
             }
         }
-    }   
+    }  
 }
 
 .intro {
