--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -6,21 +6,118 @@ $breakpoints: (
   xxlarge: $container-xxlarge
 );
 
-// small only 420px
-@media screen and (max-width: $container-small) {
-
-}
-
-// medium and up 768px
-@media screen and (min-width: $container-medium) {
-
-}
-
-// large and up 980px
-@media screen and (min-width: $container-large) {
-    /*
-    .linkedin, .instagram, .facebook {
-        display: none;
+@media (max-width: 1140px){
+    .hero-slider {
+        .container {
+            h1 {
+                font-size: 56px;
+                line-height: 56px;
+            }
+        }
     }
-    */
+    .projects {
+        .grid-x {
+            .cell {
+                .title {
+                    font-size: 26px;
+                    line-height: 26px;
+                    bottom: 20px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 980px){
+    .hero-slider {
+        .container {
+            left: 0;
+            right: 0;
+            margin: auto;
+
+            h1 {
+                text-align: center;
+            }
+
+            p {
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media (max-width: 800px){
+    .hero-slider {
+        .container {
+            width: 100%;
+
+            h1 {
+                font-size: 46px;
+                line-height: 46px;
+            }
+        }
+    }
+
+    .projects {
+        .grid-x {
+            .cell {
+                width: calc(50% - 1.3rem);
+                padding-bottom: calc((50% - 1.875rem)*0.75);
+            }
+        }
+    }
+}
+
+@media (max-width: 768px){
+    .hero-slider {
+        .container {
+            h1 {
+                font-size: 42px;
+                line-height: 42px;
+            }
+        }
+    }
+
+    .projects {
+        margin: 50px 75px;
+
+        .grid-x {
+            .cell {
+                .title {
+                    font-size: 20px;
+                    bottom: 20px;
+                }
+
+                .description {
+                    font-size: 15px;
+                    line-height: 15px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 639px){
+    .projects {
+        .grid-x {
+            .cell {
+                width: calc(100% - 1.875rem);
+                padding-bottom: calc((100% - 1.875rem)*0.75);
+            }
+        }
+    }
+}
+@media (max-width: 420px){
+    .hero-slider {
+        .container {
+            h1 {
+                font-size: 30px;
+                line-height: 30px;
+            }
+        }
+    }
+
+    .projects {
+        margin: 50px 75px;
+    }
 }
