--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,7 +26,7 @@ h4 {
     font-size: 32px;
     color: white;
     font-weight: 800;
-    line-height: 34px;
+    line-height: 32px;
 }
 
 .header {
@@ -237,12 +237,12 @@ h4 {
         height: 0;
         border-bottom: 697px solid #edf2f4;
         border-left: 660px solid transparent;
-        z-index: 4;
+        z-index: 1;
     }
 
     .large-7 {
         padding: 0 20px;
-        z-index: 5;
+        z-index: 2;
 
         .container {
             width: 690px;
@@ -285,13 +285,12 @@ h4 {
         padding-top: 75px;
         position: relative;
         margin: 0 auto;
-        z-index: 5;
+        z-index: 2;
 
         img {
             padding-left: 100px;
             padding-right: 50px;
             width: 100%;
-            z-index: 10;
         }
     }
 }
@@ -310,7 +309,7 @@ h4 {
         height: 0;
         border-bottom: 697px solid #af246f;
         border-left: 737px solid transparent;
-        z-index: 2;
+        z-index: -1;
     }
 
     #triangle-middle {
@@ -320,7 +319,7 @@ h4 {
         height: 0;
         border-bottom: 697px solid #a12577;
         border-left: 737px solid transparent;
-        z-index: 2;
+        z-index: -1;
     }
 
     #triangle-right {
@@ -330,7 +329,7 @@ h4 {
         height: 0;
         border-bottom: 697px solid #8f2782;
         border-left: 737px solid transparent;
-        z-index: 2;
+        z-index: -1;
     }
 
     h4 {
@@ -394,37 +393,33 @@ h4 {
 }
 
 .why {
-    padding-top: 100px;
+    padding: 100px 20px;
     width: 100%;
-    height: 400px;
 
     h4 {
         color:  #212121;
-        line-height: 34px;
-        position: absolute;
+        position: relative;
         z-index: 1;
+        text-align: center;
+    }
 
-        &:after {
-            content: "";
-            position: absolute;
-            border-bottom: 10px solid #ebe2f5;
-            width: 100%;
-            bottom: 0;
-            display: block;
-            z-index: -1;
-        }
+    hr {
+        margin-top: -18px;
+        width: 275px;
+        height: 10px;
+        background: #ebe2f5;
+        border-bottom: none;
+        margin-bottom: 50px;
+        margin-left: auto;
+        margin-right: auto;
+
     }
 
     .grid-x {
-        width: $container-xlarge;
         margin: 0 auto;
 
         .cell {
-            width: 368px;
-            height: 146px;
             margin: 0 auto;
-            padding-top: 32px;
-            padding-left: 25px;
 
             ul {
                 list-style-type: none;
@@ -434,7 +429,12 @@ h4 {
                     font-size: 18px;
                     font-weight: 400;
                     line-height: 24px;
+                    padding-bottom: 30px;
                 }
+            }
+
+            &.checkmark, &.cross {
+                padding: 0 50px;
             }
 
             &.checkmark {
@@ -457,7 +457,7 @@ h4 {
                     li:before {
                         content: ' ';
                         float: left;
-                        margin-top: 3px;
+                        margin-top: 5px;
                         margin-left: -2.5em;
                         width: 22px;
                         height: 22px;
