--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -73,7 +73,35 @@ $breakpoints: (
             }
         }
     }
+
+    .why {
+        .grid-x {
+            .cell {
+                h4 {
+                    font-size: 30px;
+                    line-height: 30px;
+                }
+            }
+        }
+    }
 }
+
+@media (max-width: 1024px){
+    .why {
+        padding-top: 63px;
+
+        .grid-x {
+            .cell {
+                padding-top: 32px;
+
+                h4 {
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+
 
 @media (max-width: 980px){
     .hero-slider {
