--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -51,6 +51,17 @@ $breakpoints: (
             }
         }
     }
+
+    .contact {
+        .small-5 {
+            p {
+                span {
+                    margin-top: 0;
+                    margin-right: 0px;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 1140px){
@@ -80,6 +91,23 @@ $breakpoints: (
                 h4 {
                     font-size: 30px;
                     line-height: 30px;
+                }
+            }
+        }
+    }
+
+    .contact {
+        .small-7 {
+            width: 540px;
+
+            form {
+                label {
+                    //text-align: center;
+                }
+                input {
+                    width: 90%;
+                    text-align: left;
+                    margin-left: 12px;
                 }
             }
         }
@@ -149,6 +177,37 @@ $breakpoints: (
                 width: 100%;
                 margin: 10px 0;
             }
+        }
+    }
+
+    .contact {
+        .small-5 {
+            p {
+                font-size: 20px;
+                line-height: 30px;
+            }
+        }
+    }
+}
+
+@media (max-width: 954px){
+    .contact {
+        padding: 0 80px;
+
+        .small-5 {
+            width: 100%;
+            padding: 88px 0 55px 0;
+
+            p {
+                span {
+                    display: none;
+                }
+            }
+        }
+
+        .small-7 {
+            width: 100%;
+            margin-top: 0;
         }
     }
 }
@@ -223,6 +282,19 @@ $breakpoints: (
             }
         }
     }
+
+    .contact {
+        .small-7 {
+            h4 {
+                font-size: 28px;
+                line-height: 28px;
+            }
+
+            hr {
+                width: 275px;
+            }
+        }
+    }
 }
 
 @media (max-width: 639px){
@@ -234,6 +306,14 @@ $breakpoints: (
             }
         }
     }
+
+    .contact {
+        padding: 30px 0;;
+
+        .small-5 {
+            padding: 0 50px;
+        }
+    }
 }
 
 @media (max-width: 480px){
@@ -241,6 +321,19 @@ $breakpoints: (
         .grid-x {
             width: 100%;
             padding: 0 20px;
+        }
+    }
+
+    .contact {
+        .small-7 {
+            h4 {
+                font-size: 23px;
+                line-height: 23px;
+            }
+
+            hr {
+                width: 220px;
+            }
         }
     }
 }
