--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -472,7 +472,6 @@ h4 {
 
 .contact {
     width: 100%;
-    //padding: 0 20px;
     @include background(-139deg, 229deg, #86ddcd, 20%, #b4db63, 80%);
     
     .small-5 {
@@ -686,11 +685,10 @@ h4 {
 .footer {
     background: white;
     width: 100%;
-    height: 300px;
-    padding:  55px 150px;
+    padding:  55px 20px 55px 100px;
 
-    .small-1, .small-3 {
-        padding-top: 72px;
+    .large-5, .large-4, .large-8 {
+        padding-top: 75px;
     }
 
     .logo {
